tests/baselines/reference/cloduleWithDuplicateMember1.errors.txt
==== tests/cases/compiler/cloduleWithDuplicateMember1.ts (4 errors) ====
    class C {
        get x() { return 1; }
        static get x() {
            return '';
        }
        static foo() { }
        ~~~~~~~~~~~~~~~~
!!! error TS2151: Overload signatures must all be exported or not exported.
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2000: Duplicate identifier 'x'.
    }
    module C {
        export function foo() { }
                        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
        export function x() { }
                        ~
!!! error TS2000: Duplicate identifier 'x'.
    }